--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "gridsome": "^0.7.0",
-    "vuetify": "^2.2.26"
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
+    "vuetify": "^2.2.26",
+    "webpack-node-externals": "^1.7.2"
   }
 }
