--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@gridsome/transformer-remark": "^0.5.0",
+    "@gridsome/vue-remark": "^0.2.0",
     "gridsome": "^0.7.0",
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2",
