--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@gridsome/transformer-remark": "^0.5.0",
     "@gridsome/vue-remark": "^0.2.0",
     "gridsome": "^0.7.0",
+    "gridsome-plugin-netlify-cms": "^1.0.9",
+    "netlify-cms": "^2.10.47",
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2",
     "vuetify": "^2.2.26",
